Bug 274847 - kabc2mutt crash
Summary: kabc2mutt crash
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-03 15:54 UTC by Eduardo Habkost
Modified: 2012-07-03 07:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eduardo Habkost 2011-06-03 15:54:24 UTC
Application: kabc2mutt (0.8.1)
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.2
Operating System: Linux 2.6.38.6-27.fc15.x86_64 x86_64
Distribution: "Fedora release 15 (Lovelock)"

-- Information about the crash:
- What I was doing when the application crashed: ran: 
kabc2mutt --query m/
(actually, it was run by accident when I used bash-completion with mutt)

The crash can be reproduced every time.

-- Backtrace:
Application: kabc2mutt (kabc2mutt), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#6  0x0000000000418aa1 in toUnicode (state=0x0, length=2, in=0x12f6048 "m/", this=0x0) at /usr/include/QtCore/qtextcodec.h:116
#7  EmailInput::readAddressee (this=0x1201230, stream=...) at /usr/src/debug/kdepim-4.4.11.1/console/kabcclient/src/inputformatimpls.cpp:219
#8  0x0000000000414dbb in KABCClient::performSearch (this=0x7fff8bc00910) at /usr/src/debug/kdepim-4.4.11.1/console/kabcclient/src/kabcclient.cpp:472
#9  0x0000000000416ff5 in KABCClient::slotAddressBookLoaded (this=0x7fff8bc00910) at /usr/src/debug/kdepim-4.4.11.1/console/kabcclient/src/kabcclient.cpp:754
#10 0x0000000000417090 in KABCClient::qt_metacall (this=0x7fff8bc00910, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kdepim-4.4.11.1/x86_64-redhat-linux-gnu/console/kabcclient/src/kabcclient.moc:72
#11 0x0000003e6c770a8a in QObject::event (this=0x7fff8bc00910, e=<optimized out>) at kernel/qobject.cpp:1217
#12 0x0000003e723b73d4 in notify_helper (e=0x134fe80, receiver=0x7fff8bc00910, this=0x120b8c0) at kernel/qapplication.cpp:4462
#13 QApplicationPrivate::notify_helper (this=0x120b8c0, receiver=0x7fff8bc00910, e=0x134fe80) at kernel/qapplication.cpp:4434
#14 0x0000003e723bc261 in QApplication::notify (this=0x7fff8bc00990, receiver=0x7fff8bc00910, e=0x134fe80) at kernel/qapplication.cpp:4341
#15 0x0000003e73241806 in KApplication::notify (this=0x7fff8bc00990, receiver=0x7fff8bc00910, event=0x134fe80) at /usr/src/debug/kdelibs-4.6.3/kdeui/kernel/kapplication.cpp:311
#16 0x0000003e6c75a1bc in QCoreApplication::notifyInternal (this=0x7fff8bc00990, receiver=0x7fff8bc00910, event=0x134fe80) at kernel/qcoreapplication.cpp:731
#17 0x0000003e6c75d784 in sendEvent (event=0x134fe80, receiver=0x7fff8bc00910) at kernel/qcoreapplication.h:215
#18 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x11e8310) at kernel/qcoreapplication.cpp:1372
#19 0x0000003e6c7848c3 in sendPostedEvents () at kernel/qcoreapplication.h:220
#20 postEventSourceDispatch (s=0x120e1c0) at kernel/qeventdispatcher_glib.cpp:277
#21 0x0000003e61a42b6d in g_main_dispatch (context=0x120e0e0) at gmain.c:2440
#22 g_main_context_dispatch (context=0x120e0e0) at gmain.c:3013
#23 0x0000003e61a43348 in g_main_context_iterate (context=0x120e0e0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3091
#24 0x0000003e61a435dc in g_main_context_iteration (context=0x120e0e0, may_block=1) at gmain.c:3154
#25 0x0000003e6c784d1f in QEventDispatcherGlib::processEvents (this=0x11e9a00, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#26 0x0000003e6c7596d2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#27 0x0000003e6c7598cf in QEventLoop::exec (this=0x7fff8bc00720, flags=...) at kernel/qeventloop.cpp:201
#28 0x0000003e6c75da17 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#29 0x000000000040b80b in handleKABC2Mutt (argc=<optimized out>, argv=<optimized out>) at /usr/include/QtCore/qstring.h:883
#30 0x000000000040921f in main (argc=3, argv=0x7fff8bc01a78) at /usr/src/debug/kdepim-4.4.11.1/console/kabcclient/src/main.cpp:61

Reported using DrKonqi
Comment 1 Laurent Montel 2012-07-03 07:42:34 UTC
Git commit d5c83152f54dfe35e8dd53a19c0a16c6fb6096d4 by Montel Laurent.
Committed on 03/07/2012 at 09:41.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 274847 - kabc2mutt crash codec was not defined.

FIXED-IN: 4.9

M  +1    -2    console/kabcclient/src/main.cpp

http://commits.kde.org/kdepim/d5c83152f54dfe35e8dd53a19c0a16c6fb6096d4
Comment 2 Laurent Montel 2012-07-03 07:43:10 UTC
Git commit e99983a1bff3995e38ab6203d7fde28e8a687a4c by Montel Laurent.
Committed on 03/07/2012 at 09:41.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 274847 - kabc2mutt crash codec was not defined.

FIXED-IN: 4.9
(cherry picked from commit d5c83152f54dfe35e8dd53a19c0a16c6fb6096d4)

M  +1    -2    console/kabcclient/src/main.cpp

http://commits.kde.org/kdepim/e99983a1bff3995e38ab6203d7fde28e8a687a4c