Fix Bug 274847 - kabc2mutt crash codec was not defined.

FIXED-IN: 4.9
BUG: 274847
(cherry picked from commit d5c83152f54dfe35e8dd53a19c0a16c6fb6096d4)